fix(lang): finish ticket 11 final review